<resources>
    <string name="default_web_client_id">517240344964-v6i37c6bur0gaitdr0igiv363e0k4ppr.apps.googleusercontent.com</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoia2ltcmFiYWdvIiwiYSI6ImNtNnRjbm94YjAxbHAyaXNoamk4aThldnkifQ.OSRIDYIw-6ff3RNJVYwspg</string>
    <string name="google_maps_key">AIzaSyBgn5YSLD0N6p62OrEHqjVqVsfijHdupY8</string>
    <string name="google_maps_convert_key">AIzaSyCFB6WYBf1ZFxayQuB-WuzdwVAkXQrTJvk</string>
    <string name="app_name">FarmNook</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_to_account">Login to Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="new_member">New Member?</string>
    <string name="sign_up_here">&#160;Sign Up Here</string>
    <string name="farmnook_logo">logo</string>
    <string name="enter_email_for_pass_reset">Enter your email below to receive a \npassword reset link.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_button">Back button</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user">User</string>
    <string name="hauler">Hauler</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_in_here">&#160;Sign In Here</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="total_earnings_php">Total Earnings PHP</string>
    <string name="earnings">Earnings</string>
    <string name="earnings_icon">Earnings Icon</string>
    <string name="available_deliveries">Available Deliveries</string>
    <string name="view_delivery">View Delivery</string>
    <string name="total_cost_estimation">### PHP</string>
    <string name="province_destination">Province Destination</string>
    <string name="destination_place">Destination</string>
    <string name="province">Province</string>
    <string name="pick_up_location">Pick up Location</string>
    <string name="time_estimation">2:00</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="user_name">User Name</string>
    <string name="member_since">Member Since: January 2023</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="profile">Profile</string>
    <string name="date_joined">Date Joined</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="about_farmNook">FarmNook is a mobile platform that helps farmers find the right
        transport for their agricultural needs. From fresh produce to livestock, the app connects
        farmers with trusted haulers and vehicles available in their area. FarmNook aims to improve
        delivery access, support local farming communities, and make hauling more convenient and
        reliable for everyone involved.</string>
    <string name="faq">FAQ</string>
    <string name="we_are_here_to_help_you">We are here to help you!</string>
    <string name="how_to_use_the_app">How to use the app?</string>
    <string name="update">Update</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="subscription">Subscription</string>
    <string name="status">Status:</string>
    <string name="one_time_subscription">One-Time \nSubscription</string>
    <string name="delete_account">Delete Account</string>
    <string name="deleting_account">Deleting Account</string>
    <string name="delete_account_description">Deleting your account will permanently remove all of your information from our database. This action cannot be undone.</string>
    <string name="i_understand_delete_my_account">I understand, delete my account</string>
    <string name="from_location">N. Gonzales Compound, Mandaue City</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="please_enter">Please Enter</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="select">Select</string>
    <string name="product_type">Product Type</string>
    <string name="weight">Weight (kg)</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="add_delivery">Add Delivery</string>
    <string name="add_delivery_description">Fill in your preferences to get matched with a suitable vehicle.</string>
    <string name="recommendation">Recommendation</string>
    <string name="available">Available</string>
    <string name="price">₱ 350.00</string>
    <string name="notification">Notification</string>
    <string name="notif_message">You have successfully subscribed to our application!</string>
    <string name="date_time">Just Now</string>
    <string name="plate_number_textview">Plate Number</string>
    <string name="plate_number">KGY7439</string>
    <string name="location">Tabunok Street, Mandaue City, Cebu</string>
    <string name="vehicle_textview">Vehicle</string>
    <string name="location_textview">Drop Location</string>
    <string name="vehicle_type1">Dump Truck</string>
    <string name="model">DT-5000</string>
    <string name="rate">Rate</string>
    <string name="thank_you_for_using_our_application">Thank you for using our application. Please rate the delivery.</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="danilo_s_alcantara">Danilo S. Alcantara</string>
    <string name="ratings">Ratings: 4.9</string>
    <string name="capacity">20,000 kg</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="hire_now">Hire Now</string>
    <string name="delivery_confirmed">Your request is confirmed! \n Delivery starts when the hauler departs.</string>
    <string name="wait_for_confirmation">Please wait for confirmation...</string>
    <string name="hauler_on_route_to_the_farmer_location">Hauler is on route to your location.</string>
    <string name="driver_id_textView">Driver ID:</string>
    <string name="driver_id">75c48dhqukas56</string>
    <string name="name_textView">Name:</string>
    <string name="driver_name">John Doe</string>
    <string name="vehicle_type_textview">Vehicle Type:</string>
    <string name="plate_no_textview">Plate No:</string>
    <string name="plate_num">GAR905</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="statusTextView">Status:</string>
    <string name="status_delivery">On Route</string>
    <string name="new_message">New Message</string>
    <string name="to_txt_view">To:</string>
    <string name="type_username">Type Username</string>
    <string name="contacts_txtview">Contacts</string>
    <string name="inbox">Inbox</string>
    <string name="receiver_name">Michael Chu</string>
    <string name="type_your_reply_here">Type your reply here</string>
    <string name="send_button">Send Button</string>
    <string name="we_recommend_these_based_on_your_preferences">We recommend these based on your preferences</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="set">Set</string>
    <string name="set_sched_definition">Set up a schedule to pick up and deliver your products.</string>
    <string name="enter_date_and_time">Enter date and time</string>
    <string name="your_hauler_is_here">Your Hauler is here!</string>
    <string name="delivery_history">Delivery History</string>
    <string name="ratings_count">4.9</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="give_feedback">Give feedback about our FarmNook App and share your thoughts!</string>
    <string name="submit">Submit</string>
    <string name="farmer">Farmer</string>
    <string name="accept_delivery">Accept Delivery</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="_6_digit_code">6-digit code</string>
    <string name="verify">Verify</string>
    <string name="enter_password_to_delete_your_account">Enter password to delete your account</string>
    <string name="farmnook_website_com"><u>farmnook-website.com</u></string>
    <string name="visit_our_app">You have successfully registered as a Hauler Business! You can also log in to our website to manage your vehicles and drivers. Visit our app at</string>
    <string name="set_location">Set Location</string>
    <string name="business">Business</string>
    <string name="report">Report</string>
    <string name="logout">Logout</string>
    <string name="business_name">Business Name</string>
    <string name="hauler_business">Hauler Business</string>
    <string name="close">Close</string>
    <string name="delivery_status_from">123, Makati Avenue, Makati City, Metro Manila</string>
    <string name="_456_quezon_avenue_quezon_city_metro_manila">456, Quezon Avenue, Quezon City, Metro Manila</string>
    <string name="fromm">From</string>
    <string name="_40_km">40 km</string>
    <string name="_8_hr">8 hr</string>
    <string name="too">To</string>
    <string name="initial_estimated_cost">Initial Estimated Cost:</string>
    <string name="p_600">P 600</string>
    <string name="proceed">Proceed</string>
    <string name="confirmation">Confirmation</string>
    <string name="product">Product</string>
    <string name="livestock_pig">Livestock/Pig</string>
    <string name="_20_000kg">20,000kg</string>
    <string name="baliwag_santomaru">Baliwag Santomaru</string>
    <string name="php">### PHP</string>
    <string name="usa_ka_oras">Usa ka Oras</string>
    <string name="start_delivery">Start Delivery</string>
    <string name="delivery_overview">Delivery Overview</string>
    <string name="vegetables">Vegetables</string>
    <string name="_503_php">503 PHP</string>
    <string name="_10_kilograms">10 kilograms</string>
    <string name="estimated_time_of_arrival">Estimated Time of Arrival:</string>
    <string name="_4_hours">4 hours</string>
    <string name="submitt">Submit</string>
    <string name="enter_location">Enter Location</string>
    <string name="type_location">Type location...</string>
    <string name="confirm">Confirm</string>
    <string name="remember_me">Remember Me</string>
    <string name="type_name">Type name</string>
    <string name="delete_all_notifications">Delete All Notifications</string>
    <string name="you_can_also_give_feedback_to_let_us_know">You can also give feedback to let us know!</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="person_s_image">Person\'s Image</string>
    <string name="confirmm">Confirm</string>
    <string name="hauler_id">ID:</string>
    <string name="vehicle">Vehicle:</string>
</resources>