<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_settings"/>

        <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/notification"/>

        <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/about_settings"/>

        <item
        android:id="@+id/subscription"
        android:title="@string/subscription"
        android:icon="@drawable/subscription"/>


        <item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/report_settings"/>

    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        android:icon="@drawable/feedback"/>
    </group>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout" />

</menu>