<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.auth.ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/back_arrow"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/dark_green"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/btn_back"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/old_pass_txtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"/>

    <EditText
        android:id="@+id/old_pass_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_old_password"
        android:fontFamily="@font/dm_sans_medium"
        android:drawablePadding="25dp"
        android:padding="12dp"
        android:background="@drawable/register_rounded_box"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:id="@+id/new_pass_txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"/>

    <EditText
        android:id="@+id/new_pass_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_new_password"
        android:fontFamily="@font/dm_sans_medium"
        android:drawablePadding="25dp"
        android:padding="12dp"
        android:background="@drawable/register_rounded_box"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:id="@+id/confirm_pass_txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"/>

    <EditText
        android:id="@+id/confirm_pass_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_your_password"
        android:fontFamily="@font/dm_sans_medium"
        android:drawablePadding="25dp"
        android:padding="12dp"
        android:background="@drawable/register_rounded_box"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"/>

        <Button
            android:id="@+id/update_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:fontFamily="@font/poppins"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="30dp"/>

</LinearLayout>