<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/white_rounded_button">

    <!-- Close Button (Top-Right) -->
    <ImageView
        android:id="@+id/closeDialog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:padding="4dp"
        android:src="@drawable/close_button" />

    <!-- Profile Image -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:src="@drawable/profile_circle" />

    <!-- Hauler Name -->
    <TextView
        android:id="@+id/haulerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:text="@string/user_name"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Details Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:paddingTop="12dp">

        <!-- Plate Number -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/plate_number_textview"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plateNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plate_number"
                android:textColor="@color/dark_green"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Location -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/location_textview"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textColor="@color/dark_green"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Vehicle Information -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/vehicle_textview"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/vehicleType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_type1"
                    android:textColor="@color/dark_green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vehicleType"
                    android:text="@string/model"
                    android:textColor="@color/dark_green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/model"
                    android:text="@string/capacity"
                    android:textColor="@color/dark_green"
                    android:textSize="14sp" />

            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/hireNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_rounded_button"
            android:padding="8dp"
            android:text="@string/hire_now"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>



</LinearLayout>
