<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/cream"
    tools:context=".ui.farmer.DeliveryConfirmationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/back_arrow"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:id="@+id/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/dark_green"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_circle"/>

    <!-- Hauler Name -->
    <TextView
        android:id="@+id/haulerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark_green"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/businessName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/user_name"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/dark_green"
        android:layout_marginBottom="10dp"/>

    <!-- Details Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:paddingTop="12dp">

        <!-- License Number -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plate_number_textview"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/dm_sans_bold"/>

            <TextView
                android:id="@+id/plateNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plate_number"
                android:textSize="14sp"
                android:fontFamily="@font/dm_sans"
                android:textColor="@color/dark_green" />
        </LinearLayout>

        <!-- Location -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/location_textview"
                android:textColor="@android:color/black"
                android:fontFamily="@font/dm_sans_bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:maxLines="3"
                android:ellipsize="end"
                android:textColor="@color/dark_green"
                android:fontFamily="@font/dm_sans"
                android:textSize="14sp"

                android:paddingTop="8dp"/>
        </LinearLayout>
        <!-- Vehicle Information -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vehicle_textview"
                android:textSize="14sp"
                android:paddingTop="8dp"
                android:fontFamily="@font/dm_sans_bold"
                android:textColor="@android:color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/vehicleType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_type1"
                    android:textSize="14sp"
                    android:fontFamily="@font/dm_sans"
                    android:textColor="@color/dark_green"/>

                <TextView
                    android:id="@+id/model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textSize="14sp"
                    android:textColor="@color/dark_green"
                    android:fontFamily="@font/dm_sans"
                    android:layout_below="@id/vehicleType"/>

            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product"
                android:textSize="14sp"
                android:paddingTop="8dp"
                android:fontFamily="@font/dm_sans_bold"
                android:textColor="@android:color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/productType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/livestock_pig"
                    android:textSize="14sp"
                    android:fontFamily="@font/dm_sans"
                    android:textColor="@color/dark_green"/>

                <TextView
                    android:id="@+id/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_000kg"
                    android:textSize="14sp"
                    android:textColor="@color/dark_green"
                    android:fontFamily="@font/dm_sans"
                    android:layout_below="@id/productType"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmm"
        android:background="@drawable/green_rounded_button"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_gravity="center"/>
</LinearLayout>